codepkg/objects/Agency_Rate_Agreement_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Rate_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Rate Agreement</label>
        <referenceTo>Agency_Rate_Agreement__c</referenceTo>
        <relationshipLabel>Agency Rate Agreement Line Items</relationshipLabel>
        <relationshipName>Agency_Rate_Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MOU_MOA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOU/MOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agency Rate Agreement Line Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Rate Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Rate Agreement Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>